# gd32e502-demo-suites-cmake-vscode

./: README.md
Drivers/BSP/GD32E502C_START/: gd32e502c_start.c  gd32e502c_start.h
Drivers/BSP/GD32E502K_START/: gd32e502k_start.c  gd32e502k_start.h
Drivers/BSP/GD32E502R_START/: gd32e502r_start.c  gd32e502r_start.h
Drivers/BSP/GD32E502V_EVAL/: gd32e502v_eval.c  gd32e502v_eval.h
Drivers/GD32E502_standard_peripheral/Include/: gd32e502_adc.h  gd32e502_bkp.h  gd32e502_can.h  gd32e502_cmp.h  gd32e502_crc.h  gd32e502_dac.h  gd32e502_dbg.h  gd32e502_dma.h  gd32e502_exti.h  gd32e502_fmc.h  gd32e502_fwdgt.h  gd32e502_gpio.h  gd32e502_i2c.h  gd32e502_mfcom.h  gd32e502_misc.h  gd32e502_pmu.h  gd32e502_rcu.h  gd32e502_rtc.h  gd32e502_spi.h  gd32e502_syscfg.h  gd32e502_timer.h  gd32e502_trigsel.h  gd32e502_usart.h  gd32e502_wwdgt.h
Drivers/GD32E502_standard_peripheral/Source/: gd32e502_adc.c  gd32e502_bkp.c  gd32e502_can.c  gd32e502_cmp.c  gd32e502_crc.c  gd32e502_dac.c  gd32e502_dbg.c  gd32e502_dma.c  gd32e502_exti.c  gd32e502_fmc.c  gd32e502_fwdgt.c  gd32e502_gpio.c  gd32e502_i2c.c  gd32e502_mfcom.c  gd32e502_misc.c  gd32e502_pmu.c  gd32e502_rcu.c  gd32e502_rtc.c  gd32e502_spi.c  gd32e502_syscfg.c  gd32e502_timer.c  gd32e502_trigsel.c  gd32e502_usart.c  gd32e502_wwdgt.c
Projects/GD32E502C_START/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32E502C_START/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32E502C_START/03_EXTI_Key_Interrupt_mode/Application/: CMakeLists.txt  readme.txt
Projects/GD32E502C_START/04_USART_HyperTerminal_Interrupt/Application/: readme.txt
Projects/GD32E502C_START/04_USART_HyperTerminal_Interrupt/Drivers/BSP/GD32E502C_START/: CMakeLists.txt
Projects/GD32E502C_START/05_TIMER_Key_EXTI/: CMakeLists.txt
Projects/GD32E502C_START/05_TIMER_Key_EXTI/Application/: readme.txt
Projects/GD32E502C_START/05_TIMER_Key_EXTI/cmake/: project.cmake
Projects/GD32E502C_START/06_TRIGSEL_TIMER_Trigger_EXTI/: GD32E502.svd
Projects/GD32E502C_START/06_TRIGSEL_TIMER_Trigger_EXTI/Application/: readme.txt
Projects/GD32E502K_START/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32E502K_START/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32E502K_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32E502K_START/03_EXTI_Key_Interrupt_mode/Drivers/BSP/GD32E502K_START/: CMakeLists.txt
Projects/GD32E502K_START/04_USART_HyperTerminal_Interrupt/Application/: CMakeLists.txt  readme.txt
Projects/GD32E502K_START/05_TIMER_Key_EXTI/: CMakeLists.txt
Projects/GD32E502K_START/05_TIMER_Key_EXTI/Application/: readme.txt
Projects/GD32E502K_START/06_TRIGSEL_TIMER_Trigger_EXTI/Application/: readme.txt
Projects/GD32E502R_START/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32E502R_START/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32E502R_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32E502R_START/04_USART_HyperTerminal_Interrupt/Application/: readme.txt
Projects/GD32E502R_START/04_USART_HyperTerminal_Interrupt/Drivers/BSP/GD32E502R_START/: CMakeLists.txt
Projects/GD32E502R_START/05_TIMER_Key_EXTI/: CMakeLists.txt
Projects/GD32E502R_START/05_TIMER_Key_EXTI/Application/: CMakeLists.txt  readme.txt
Projects/GD32E502R_START/06_TRIGSEL_TIMER_Trigger_EXTI/Application/: readme.txt
Projects/GD32E502V_EVAL/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32E502V_EVAL/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32E502V_EVAL/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32E502V_EVAL/06_USART_DMA/Drivers/BSP/GD32E502V_EVAL/: CMakeLists.txt
Projects/GD32E502V_EVAL/12_I2C_EEPROM/: CMakeLists.txt
Projects/GD32E502V_EVAL/14_I2S_Audio_Player/: gd32e502_flash.ld
Projects/GD32E502V_EVAL/14_I2S_Audio_Player/Drivers/GD32E502_standard_peripheral/: CMakeLists.txt
(+130 files in other folders)
